# HomeBlocks

./: CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build_commit.yml  build_dependencies.yml  conan_build.yml  version_change_check.yml
cmake/: sanitize.cmake
docs/craft/: README.md  api.md  kernel.md  protocol.md  rpcs.md  states.md  subtasks.md  transport.md  wire.md
src/: CMakeLists.txt
src/include/homeblks/: craft_types.hpp  home_blocks.hpp
src/lib/: CMakeLists.txt  coro_helpers.hpp  hb_internal.hpp  homeblks_impl.cpp  homeblks_impl.hpp  listener.cpp  listener.hpp  volume_mgr.cpp
src/lib/craft/: CMakeLists.txt  craft_api.cpp  craft_repl_dev.cpp  craft_repl_dev.hpp  craft_replica.hpp
src/lib/craft/memory/: CMakeLists.txt  mem_craft_cluster.cpp  mem_craft_cluster.hpp  mem_craft_replica.cpp  mem_craft_replica.hpp  mem_craft_volume.hpp
src/lib/craft/memory/tests/: CMakeLists.txt  craft_test_main.cpp  test_craft_e2e.cpp  test_craft_memory.cpp
src/lib/craft/tests/: CMakeLists.txt  test_craft_peer_exchange.cpp  test_craft_truncate.cpp  test_craft_write.cpp
src/lib/memory_backend/: CMakeLists.txt  mem_homeblks.cpp  mem_homeblks.hpp
src/lib/tests/: fixture_app.cpp
src/lib/volume/: CMakeLists.txt  index_fixed_kv.hpp  index_fixed_table.hpp  index_prefix_kv.hpp  index_prefix_table.hpp  io_req.hpp  volume.cpp  volume.hpp  volume_chunk_selector.cpp  volume_chunk_selector.hpp
src/lib/volume/tests/: CMakeLists.txt  test_common.hpp  test_volume.cpp  test_volume_chunk_selector.cpp  test_volume_io.cpp
src/test/: CMakeLists.txt  homeblk_disk.cpp  homeblk_disk.hpp  homeblk_ublk_cli.cpp  tsan_suppressions.txt
src/test/craft/: CMakeLists.txt
src/test/craft/admin/: craft_admin_http.cpp  craft_admin_http.hpp
src/test/craft/client/: README.md  craft_client.cpp  craft_client.hpp  craft_ublk_cli.cpp  craft_ublk_disk.cpp  craft_ublk_disk.hpp  dlsn_tracker.cpp  dlsn_tracker.hpp  read_route_map.hpp  when_quorum.hpp
src/test/craft/model/: mem_craft_cluster.cpp  mem_craft_cluster.hpp  mem_craft_replica.cpp  mem_craft_replica.hpp  mem_craft_volume.cpp  mem_craft_volume.hpp
src/test/craft/tests/: craft_test_util.hpp  test_craft_client.cpp  test_craft_e2e.cpp  test_craft_memory.cpp  test_dlsn_tracker.cpp
src/test/legacy_ublk/: CMakeLists.txt  homeblk_disk.cpp  homeblk_disk.hpp  homeblk_ublk_cli.cpp
